Compressed level display into a function in the services script.  Fixed a bug that made the progress bar overflow the container. [axof: 154]

--- a/app/components/styles/header.less
+++ b/app/components/styles/header.less
@@ -67,6 +67,7 @@ header .level {
 	background: @header-level-bg;
 	margin: 30px auto 0px auto;
 	position: relative;
+	overflow: hidden;
 }
 header .level p {
 	height: inherit;
