--- a/app/resources/less/app.less
+++ b/app/resources/less/app.less
@@ -195,6 +195,7 @@ header .level {
 	background: @header-level-bg;
 	margin: 30px auto 0px auto;
 	position: relative;
+	overflow: hidden;
 }
 header .level p {
 	height: inherit;
